Add deployment configuration for production
- Add Vercel configuration for Flutter web frontend
- Add Railway/Nixpacks configuration for Spring Boot backend
- Update CORS to support environment-based allowed origins
- Add environment variable support for API_BASE_URL and Razorpay keys
- Create deployment scripts for Windows and Unix
- Add comprehensive deployment documentation (DEPLOYMENT.md)
- Add quick deployment guide (QUICK_DEPLOY.md)

Deployment ready:
- Frontend: Vercel
- Backend: Railway/Render
- Database: PostgreSQL (Railway/Neon/Supabase)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>